# openclaw-macStudio

./: README.md  control-ui.html  index.html  package.json  pnpm-lock.yaml  test-signature.mjs  test-variations.mjs  test-ws-connect.mjs  tsconfig.json  vite.config.ts
src/: App.tsx  control-ui-main.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  tray.rs
src/components/common/: ErrorBoundary.tsx  Loading.tsx
src/components/layout/: AppLayout.tsx  Sidebar.tsx  TitleBar.tsx
src/components/ui/: Button.tsx  Card.tsx  Input.tsx  StatusBadge.tsx
src/features/agents/: index.ts
src/features/agents/components/: AgentsPage.tsx  agents.css
src/features/agents/hooks/: useToolsCatalog.ts
src/features/channels/: index.ts
src/features/channels/components/: ChannelConfigForm.tsx  ChannelsPage.tsx  NostrProfileEditor.tsx  channel-data.ts  channel-types.ts  channels.css  index.ts
src/features/chat/: index.ts
src/features/chat/chat/: grouped-render.tsx  message-normalizer.ts  tool-cards.tsx  (+1 more)
src/features/connection/: index.ts
src/features/control/: index.ts
src/features/cron/: CRON_DIFF.md  index.ts
src/features/event-logs/: index.ts
src/features/nodes/: index.ts
src/features/overview/: index.ts
src/features/preferences/: app-copy.ts
src/features/sessions/: index.ts  types.ts
src/features/usage/: USAGE_DIFF.md
src/lib/gateway/: auth.ts  client.ts  device-store.ts  index.ts  protocol.ts  types.ts
src/lib/utils/: index.ts
src/styles/: globals.css
(+70 files in other folders)
