[package]
name = "openclaw"
version = "0.1.0"
description = "OpenClaw Desktop Client for macOS"
authors = ["OpenClaw"]
edition = "2021"

[lib]
name = "openclaw_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-websocket = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
